--- a/app/views/chat/index.html.haml
+++ b/app/views/chat/index.html.haml
@@ -14,10 +14,10 @@
   
       %hr 
       %div.button-set
-        %button{ onclick: "jsfxgui.reset()"} reset
-        %button{ onclick: "jsfxgui.randomize()"} rand
-        %button{ onclick: "jsfxgui.play()"} play
-        %button{ onclick: "jsfxgui.paramsToLibrary()"} to_lib
+        %button#reset{ onclick: "jsfxgui.reset()"} reset
+        %button#rand{ onclick: "jsfxgui.randomize()"} rand
+        %button#play{ onclick: "jsfxgui.play()"} play
+        %button#to_lib{ onclick: "jsfxgui.paramsToLibrary()"} to_lib
       
     
     %div#stuff 
