--- a/app/views/chat/index.html.haml
+++ b/app/views/chat/index.html.haml
@@ -4,7 +4,7 @@
       %span{class:'time'}=chat_message.created_at.strftime('%-d/%-m/%Y %k:%M:%S')
       =chat_message.message
 %div{ class: 'post'}
-  %button post
+  %button#sendChat post
   %input{type: 'text', name: 'message'}
 
 %div#container
@@ -15,7 +15,8 @@
 
     %div#stuff 
       %input#libload{type: "text", value:'["noise",0.0000,0.4000,0.0000,0.0060,0.0000,0.1220,20.0000,460.0000,2400.0000,-0.  5240,0.0000,0.0000,0.0100,0.0003,0.0000,0.0000,0.0000,0.0000,0.0000,0.0000,0.0000,0.0000,0.9990,0.0000,0.0000,0.0000,0.  0000]'}
-      %button#loadField{onclick:"jsfxgui.paramsFromFieldAndPlay()"} post
+      %button#loadField{onclick:"jsfxgui.paramsFromFieldAndPlay()"} play
+      %button#sendField post
       %a#link{href:"#", style:"display:none"} link
       %input#playonchange{type:"checkbox", checked: :checked} trigger on change
       %br
