--- a/app/views/chat/index.html.haml
+++ b/app/views/chat/index.html.haml
@@ -25,6 +25,8 @@
     
     %h3 log
     %div#log
+      %a{ href:'https://github.com/egonelbre/jsfx'}jsfix github:egonelbre
+      %br
       jsfx... loading...
     
     
